Fixed Covers
Need to add navigation functionality to Timeline

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,6 +23,10 @@
 }
 
 .timeline {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   width: 30%;
 }
 
@@ -87,4 +91,11 @@
 /* Special */
 .alignEndBox {
   width: 25%;
+}
+
+.cover {
+  position: relative;
+  margin-top: 5rem;
+  width: 15rem;
+  height: 20rem;
 }
